--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "cover": "solidity-coverage"
+  },
   "dependencies": {
+    "solidity-coverage": "^0.2.1",
     "web3": "0.19.0"
   }
 }
