--- a/package.json
+++ b/package.json
@@ -3,10 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "watch": {
+    "test": {
+      "patterns": [ "contracts", "test" ],
+      "extensions": "sol,js",
+      "delay": 3000
+    }
+  },
   "scripts": {
+    "start": "truffle compile --all && truffle migrate --reset && npm run watch",
+    "test" : "truffle test",
+    "watch": "npm-watch",
     "cover": "solidity-coverage"
   },
   "dependencies": {
+    "npm-watch": "^0.2.0",
     "solidity-coverage": "^0.2.1",
     "web3": "0.19.0"
   }
